--- a/frontends/php/assets/styles/hc-dark.css
+++ b/frontends/php/assets/styles/hc-dark.css
@@ -1057,17 +1057,17 @@ output {
     vertical-align: middle; }
 
 .multiselect-control {
+  display: flex;
   position: relative;
   vertical-align: top;
-  white-space: nowrap;
-  display: flex; }
+  white-space: nowrap; }
 
 .multiselect {
+  display: flex;
+  flex-direction: column;
   margin-right: 3px;
   min-height: 24px;
-  white-space: normal;
-  display: flex;
-  flex-direction: column; }
+  white-space: normal; }
   .multiselect.active {
     border-color: #bbb; }
   .multiselect input[type="text"] {
@@ -1129,7 +1129,7 @@ output {
     bottom: 0;
     z-index: -1; }
 
-.multiselect-button, .multiselect {
+.multiselect-button {
   vertical-align: top; }
 
 .multiselect-suggest, .multiselect-matches {
